# hoomestead-chat

./: .gitignore  CHANGES.md  CLAUDE.md  HOW-IT-WORKS.md  electron-builder.dev.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
File:** src-tauri/src/: auth.rs  sync.rs
File:** src-tauri/src/commands/: media.rs  members.rs  messages.rs
File:** src/api/: commands.ts  events.ts
File:** src/components/chat/: Message.tsx  MessageInput.tsx  MessageList.tsx  TypingIndicator.tsx
File:** src/components/common/: ContextMenu.tsx
File:** src/components/layout/: ChannelSidebar.tsx
File:** src/components/server/: CreateServer.tsx
File:** src/store/: messageStore.ts
electron/: main.ts  preload.ts  tsconfig.json
scripts/: update.sh
src/: App.tsx  main.tsx
src-rust/: Cargo.toml
src-rust/src/: auth.rs  error.rs  main.rs  models.rs  sse.rs  state.rs  sync.rs
src-rust/src/commands/: media.rs  members.rs  messages.rs  mod.rs  reactions.rs  receipts.rs  rooms.rs  spaces.rs  typing.rs  voip.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  lib.rs  main.rs  models.rs  state.rs  sync.rs
src-tauri/src/commands/: media.rs  members.rs  messages.rs  reactions.rs  receipts.rs  rooms.rs  spaces.rs  typing.rs  voip.rs
src-tauri/tests/: integration_test.rs
src/api/: commands.ts  events.ts  transport.ts
src/store/: authStore.ts  callStore.ts  memberStore.ts  messageStore.ts  roomStore.ts  settingsStore.ts  spaceStore.ts  toastStore.ts  uiStore.ts
src/styles/: channels.css  globals.css  layout.css  members.css  messages.css  servers.css  settings.css  voice.css
src/utils/: theme.ts  userColors.ts
(+34 files in other folders)
