[package]
name = "hoomestead-chat"
version = "0.1.0"
edition = "2021"

[lib]
name = "hoomestead_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
matrix-sdk = { version = "0.10", features = ["e2e-encryption", "sqlite", "markdown", "bundled-sqlite"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
mime = "0.3.17"
futures = "0.3.32"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.1"
